[tool.poetry]
name = "@nestpy/core"
version = "0.1.0"
description = "Modern, fast, powerful node.js web framework"
authors = ["Manuel S. Lemos"]
readme = "README.md"
license = "MIT"
# packages = [{include = "nestpy"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.105.0"
uvicorn = {extras = ["standard"], version = "0.25.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
